# Media_Network

./: .gitignore  CMakeLists.txt  LICENSE  README.en.md  README.md  main.c
.circleci/: config.yml
.github/workflows/: blank.yml  cmake.yml
lib/SLD2/lib/cmake/SDL2/: sdl2-config.cmake
src/: Media_app.c
src/media-main/src/: Media_app.c  Media_main.h
src/my_rtsp/: my_rtsp.c  my_rtsp.h
src/win_media_video/: win_media_video.c  win_media_video.h
